--- a/app/src/main/res/layout/custom_bottom_nav.xml
+++ b/app/src/main/res/layout/custom_bottom_nav.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_bottom_nav"
     android:elevation="10dp"
-    android:clipToPadding="false"
     android:padding="15dp">
 
+    <!-- News Item -->
     <LinearLayout
         android:id="@+id/news_item"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:background="@drawable/bg_item_nav"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/suggestions_item"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:background="@drawable/bg_item_nav"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toStartOf="@+id/suggestions_item" >
 
         <ImageView
             android:id="@+id/newsImage"
@@ -36,31 +36,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:textColor="@color/md_theme_inverseSurface"
             android:fontFamily="@font/jakarta_semibold"
-            android:text="News" />
+            android:maxLines="1"
+            android:text="News"
+            android:textColor="@color/md_theme_inverseSurface" />
     </LinearLayout>
 
+    <!-- Suggestions Item -->
     <LinearLayout
         android:id="@+id/suggestions_item"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="41dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/news_item"
-        app:layout_constraintEnd_toStartOf="@+id/calendar_item"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/news_item"
-        app:layout_constraintTop_toTopOf="@+id/news_item">
+        app:layout_constraintEnd_toStartOf="@+id/calendar_item">
 
         <ImageView
             android:id="@+id/suggestionImage"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            app:tint="@color/md_theme_inverseSurface"
             android:src="@drawable/ic_suggestion"
+            app:tint="@color/md_theme_inverseSurface"
             tools:contentDescription="null" />
 
         <TextView
@@ -68,64 +68,65 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:textColor="@color/md_theme_inverseSurface"
             android:fontFamily="@font/jakarta_semibold"
+            android:maxLines="1"
             android:text="Inputs"
+            android:textColor="@color/md_theme_inverseSurface"
             android:visibility="gone" />
     </LinearLayout>
 
+    <!-- Calendar Item -->
     <LinearLayout
         android:id="@+id/calendar_item"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="41dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/suggestions_item"
-        app:layout_constraintEnd_toStartOf="@+id/profile_item"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/suggestions_item"
-        app:layout_constraintTop_toTopOf="@+id/suggestions_item">
+        app:layout_constraintEnd_toStartOf="@+id/profile_item">
 
         <ImageView
             android:id="@+id/calendarImage"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            app:tint="@color/md_theme_inverseSurface"
             android:src="@drawable/ic_calendar"
+            app:tint="@color/md_theme_inverseSurface"
             tools:contentDescription="null" />
 
         <TextView
             android:id="@+id/tvCalendar"
             android:layout_width="wrap_content"
-            android:textColor="@color/md_theme_inverseSurface"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:fontFamily="@font/jakarta_semibold"
+            android:maxLines="1"
             android:text="Events"
+            android:textColor="@color/md_theme_inverseSurface"
             android:visibility="gone" />
     </LinearLayout>
 
+    <!-- Profile Item -->
     <LinearLayout
         android:id="@+id/profile_item"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/calendar_item"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/calendar_item"
-        app:layout_constraintTop_toTopOf="@+id/calendar_item">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/profileImage"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            app:tint="@color/md_theme_inverseSurface"
             android:src="@drawable/ic_profile"
+            app:tint="@color/md_theme_inverseSurface"
             tools:contentDescription="null" />
 
         <TextView
@@ -133,9 +134,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:textColor="@color/md_theme_inverseSurface"
             android:fontFamily="@font/jakarta_semibold"
+            android:maxLines="1"
             android:text="Profile"
+            android:textColor="@color/md_theme_inverseSurface"
             android:visibility="gone" />
     </LinearLayout>
 
