--- a/app/src/main/res/layout/dialog_add_announcement.xml
+++ b/app/src/main/res/layout/dialog_add_announcement.xml
@@ -112,7 +112,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/md_theme_primary"
+                    android:background="@color/md_theme_surfaceVariant"
                     android:orientation="vertical">
 
                     <!-- Rich Text Editor Header -->
@@ -128,7 +128,8 @@
 
                     <!-- Rich Text Editor Toolbar -->
                     <HorizontalScrollView
-                        android:layout_width="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@color/md_theme_surfaceVariant"
                         android:padding="8dp">
@@ -155,24 +156,6 @@
                                 style="@style/RichEditorButton"
                                 android:contentDescription="Underline"
                                 app:icon="@drawable/ic_underline_24" />
-
-                            <View
-                                android:layout_width="1dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginHorizontal="8dp"
-                                android:background="?attr/colorOutline" />
-
-                            <com.google.android.material.button.MaterialButton
-                                android:id="@+id/btnHeading1"
-                                style="@style/RichEditorTextButton"
-                                android:contentDescription="Heading 1"
-                                android:text="H1" />
-
-                            <com.google.android.material.button.MaterialButton
-                                android:id="@+id/btnHeading2"
-                                style="@style/RichEditorTextButton"
-                                android:contentDescription="Heading 2"
-                                android:text="H2" />
 
                             <View
                                 android:layout_width="1dp"
