--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,7 +30,7 @@
                 android:fontFamily="@font/jakarta_bold"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="?attr/colorOnSurface"
+                android:textColor="?attr/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +51,7 @@
                 android:backgroundTint="@color/md_theme_background"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginEnd="26dp"
-                app:iconSize="28dp"
+                app:iconSize="24dp"
                 android:paddingLeft="2dp"
                 app:iconTint="?attr/colorOnSurface" />
 
