--- a/app/src/main/res/drawable/input_background.xml
+++ b/app/src/main/res/drawable/input_background.xml
@@ -2,13 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/inputBackground" />
+    <solid android:color="@color/md_theme_surface" />
 
     <corners android:radius="20dp" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/dividerColor" />
+        android:color="@color/md_theme_onSurfaceVariant" />
 
 </shape>
-
