--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/main"
     tools:context=".OnboardingActivity">
@@ -14,15 +13,12 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
-        android:id="@+id/dotsIndicator"
+    <!-- Simplified indicator placeholder to avoid missing attrs/library -->
+    <LinearLayout
+        android:id="@+id/dotsPlaceholder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="20dp"
-        app:dotsColor="@color/md_theme_primaryContainer"
-        app:selectedDotColor="@color/md_theme_primary"
-        app:dotsSize="10dp"
-        app:dotsSpacing="8dp"
-        app:dotsCornerRadius="5dp" />
+        android:orientation="horizontal" />
 </LinearLayout>
