--- a/app/src/main/res/layout/item_message_student.xml
+++ b/app/src/main/res/layout/item_message_student.xml
@@ -16,15 +16,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/status_background"
-            android:padding="10dp">
+            android:padding="14dp">
 
             <TextView
                 android:id="@+id/tv_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/md_theme_onPrimaryContainer"
-                android:textSize="14sp"
-                android:maxWidth="280dp"/>
+                android:textSize="15sp"
+                android:lineSpacingExtra="2dp"
+                android:maxWidth="320dp"/>
         </LinearLayout>
 
         <LinearLayout
